--- a/src/main/resources/view/ProjectCompletionStatusPanel.fxml
+++ b/src/main/resources/view/ProjectCompletionStatusPanel.fxml
@@ -6,7 +6,7 @@
 
 <?import javafx.geometry.Insets?>
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" spacing="20">
-    <Label fx:id="projectCompletionHeading" styleClass="details_title" text="Project Completion"/>
+    <Label fx:id="projectCompletionHeading" styleClass="details_title" text="Overall Completion Percentage"/>
     <VBox alignment="CENTER" styleClass="stack-pane" >
         <StackPane fx:id="ocpDiagram"/>
         <Label fx:id="ocpCaption" text="\$ocpCaption" styleClass="details_subheading"/>
