--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,6 +1,11 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+@import "{{ site.theme }}";
+
+.inner {
+  max-width: 75%;
+}
 
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
